@startuml

class ListExamsUI {
    doShow()
}

class ListExamsController {
    getOpenExams()
}

class ListExamsService {
    getOpenCourses()
}

class ExamRepository {
}

class Exam {
}

ListExamsUI --> ListExamsController
ListExamsController --> ListExamsService
ListExamsService --> ExamRepository
ListExamsController --> Exam

@enduml